Fully minified files

--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -1,47 +1,3 @@
-<html><head><link rel="import" href="../../bower_components/polymer/polymer.html">
-
-<link rel="import" href="../../bower_components/app-layout/app-toolbar/app-toolbar.html">
-
-<link rel="import" href="../../bower_components/paper-styles/typography.html">
-
-</head><body><dom-module id="page-footer">
-  <template>
-    <style type="text/css">
-      :host {
-        @apply(--paper-font-body2);
-
-        background: #424242;
-        color: #9e9e9e;        
-        display: block;
-        padding: 16px 40px;                
-      }
-
-      a {
-        color: inherit;        
-        text-decoration: none;
-      }
-
-      .bottom-section {
-        @apply(--paper-font-body2);
-      }                              
-
-      .bottom-section-item {
-        margin-right: 16px;
-      }                   
-
-      .section-title {
-        color: #fff;
-      }
-    </style>    
-
-    <footer>            
-      <app-toolbar class="bottom-section">
-        <span class="section-title bottom-section-item">Paneiro Virtual</span>
-        <a class="bottom-section-item" href="/sobre">Sobre nós</a>
-        <a class="bottom-section-item" href="/fale-conosco">Fale Conosco</a>
-      </app-toolbar>        
-    </footer>    
-  </template>
-
-  </dom-module>
-<script src="page-footer.js"></script></body></html>
+<link rel="import" href="../../bower_components/polymer/polymer.html"><link rel="import" href="../../bower_components/app-layout/app-toolbar/app-toolbar.html"><link rel="import" href="../../bower_components/paper-styles/typography.html"><dom-module id="page-footer"><template><style>:host{@apply(--paper-font-body2);background:#424242;color:#9e9e9e;display:block;padding:16px 40px}a{color:inherit;text-decoration:none}.bottom-section{@apply(--paper-font-body2)}.bottom-section-item{margin-right:16px}.section-title{color:#fff}</style><footer><app-toolbar class="bottom-section"><span class="section-title bottom-section-item">Paneiro Virtual</span> <a class="bottom-section-item" href="/sobre">Sobre nós</a> <a class="bottom-section-item" href="/fale-conosco">Fale Conosco</a></app-toolbar></footer></template><script>Polymer({
+      is: 'page-footer'      
+    });</script></dom-module>
