--- a/assets/css/paneiro.css
+++ b/assets/css/paneiro.css
@@ -1,550 +1,1 @@
-.section {
-  width: 100%;
-}
-
-.container {
-  display: block;
-  margin: 0 auto;
-}
-@media (max-width: 47.99em) {
-  .container {
-    width: 100%;
-  }
-}
-@media (min-width: 48em) and (max-width: 61.24em) {
-  .container {
-    width: 750px;
-  }
-}
-@media (min-width: 61.25em) and (max-width: 74.99em) {
-  .container {
-    width: 970px;
-  }
-}
-@media (min-width: 75em) {
-  .container {
-    width: 1170px;
-  }
-}
-
-.row {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  width: 100%;
-}
-.row .col {
-  width: 100%;
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-offset-0 {
-    margin-left: 0;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-1 {
-    width: 8.33333%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-offset-1 {
-    margin-left: 8.33333%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-2 {
-    width: 16.66667%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-offset-2 {
-    margin-left: 16.66667%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-3 {
-    width: 25%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-offset-3 {
-    margin-left: 25%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-4 {
-    width: 33.33333%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-offset-4 {
-    margin-left: 33.33333%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-5 {
-    width: 41.66667%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-offset-5 {
-    margin-left: 41.66667%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-6 {
-    width: 50%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-offset-6 {
-    margin-left: 50%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-7 {
-    width: 58.33333%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-offset-7 {
-    margin-left: 58.33333%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-8 {
-    width: 66.66667%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-offset-8 {
-    margin-left: 66.66667%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-9 {
-    width: 75%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-offset-9 {
-    margin-left: 75%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-10 {
-    width: 83.33333%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-offset-10 {
-    margin-left: 83.33333%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-11 {
-    width: 91.66667%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-offset-11 {
-    margin-left: 91.66667%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-12 {
-    width: 100%;
-  }
-}
-@media (max-width: 47.99em) {
-  .row .col-xs-offset-12 {
-    margin-left: 100%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-offset-0 {
-    margin-left: 0;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-1 {
-    width: 8.33333%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-offset-1 {
-    margin-left: 8.33333%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-2 {
-    width: 16.66667%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-offset-2 {
-    margin-left: 16.66667%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-3 {
-    width: 25%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-offset-3 {
-    margin-left: 25%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-4 {
-    width: 33.33333%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-offset-4 {
-    margin-left: 33.33333%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-5 {
-    width: 41.66667%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-offset-5 {
-    margin-left: 41.66667%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-6 {
-    width: 50%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-offset-6 {
-    margin-left: 50%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-7 {
-    width: 58.33333%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-offset-7 {
-    margin-left: 58.33333%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-8 {
-    width: 66.66667%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-offset-8 {
-    margin-left: 66.66667%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-9 {
-    width: 75%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-offset-9 {
-    margin-left: 75%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-10 {
-    width: 83.33333%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-offset-10 {
-    margin-left: 83.33333%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-11 {
-    width: 91.66667%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-offset-11 {
-    margin-left: 91.66667%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-12 {
-    width: 100%;
-  }
-}
-@media (min-width: 48em) {
-  .row .col-sm-offset-12 {
-    margin-left: 100%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-offset-0 {
-    margin-left: 0;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-1 {
-    width: 8.33333%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-offset-1 {
-    margin-left: 8.33333%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-2 {
-    width: 16.66667%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-offset-2 {
-    margin-left: 16.66667%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-3 {
-    width: 25%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-offset-3 {
-    margin-left: 25%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-4 {
-    width: 33.33333%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-offset-4 {
-    margin-left: 33.33333%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-5 {
-    width: 41.66667%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-offset-5 {
-    margin-left: 41.66667%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-6 {
-    width: 50%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-offset-6 {
-    margin-left: 50%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-7 {
-    width: 58.33333%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-offset-7 {
-    margin-left: 58.33333%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-8 {
-    width: 66.66667%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-offset-8 {
-    margin-left: 66.66667%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-9 {
-    width: 75%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-offset-9 {
-    margin-left: 75%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-10 {
-    width: 83.33333%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-offset-10 {
-    margin-left: 83.33333%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-11 {
-    width: 91.66667%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-offset-11 {
-    margin-left: 91.66667%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-12 {
-    width: 100%;
-  }
-}
-@media (min-width: 61.25em) {
-  .row .col-md-offset-12 {
-    margin-left: 100%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-offset-0 {
-    margin-left: 0;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-1 {
-    width: 8.33333%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-1 {
-    margin-left: 8.33333%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-2 {
-    width: 16.66667%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-2 {
-    margin-left: 16.66667%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-3 {
-    width: 25%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-3 {
-    margin-left: 25%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-4 {
-    width: 33.33333%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-4 {
-    margin-left: 33.33333%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-5 {
-    width: 41.66667%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-5 {
-    margin-left: 41.66667%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-6 {
-    width: 50%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-6 {
-    margin-left: 50%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-7 {
-    width: 58.33333%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-7 {
-    margin-left: 58.33333%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-8 {
-    width: 66.66667%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-8 {
-    margin-left: 66.66667%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-9 {
-    width: 75%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-9 {
-    margin-left: 75%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-10 {
-    width: 83.33333%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-10 {
-    margin-left: 83.33333%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-11 {
-    width: 91.66667%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-11 {
-    margin-left: 91.66667%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-12 {
-    width: 100%;
-  }
-}
-@media (min-width: 75em) {
-  .row .col-lg-12 {
-    margin-left: 100%;
-  }
-}
-
-* {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-}
+.section{width:100%}.container{display:block;margin:0 auto}@media (max-width:47.99em){.container{width:100%}.row .col-xs-offset-0{margin-left:0}}@media (min-width:48em) and (max-width:61.24em){.container{width:750px}}@media (min-width:61.25em) and (max-width:74.99em){.container{width:970px}}@media (min-width:75em){.container{width:1170px}}.row,.row .col{width:100%}.row{display:-webkit-flex;display:flex;-webkit-flex-wrap:wrap;flex-wrap:wrap}@media (max-width:47.99em){.row .col-xs-1{width:8.33333%}.row .col-xs-offset-1{margin-left:8.33333%}.row .col-xs-2{width:16.66667%}.row .col-xs-offset-2{margin-left:16.66667%}.row .col-xs-3{width:25%}.row .col-xs-offset-3{margin-left:25%}.row .col-xs-4{width:33.33333%}.row .col-xs-offset-4{margin-left:33.33333%}.row .col-xs-5{width:41.66667%}.row .col-xs-offset-5{margin-left:41.66667%}.row .col-xs-6{width:50%}.row .col-xs-offset-6{margin-left:50%}.row .col-xs-7{width:58.33333%}.row .col-xs-offset-7{margin-left:58.33333%}.row .col-xs-8{width:66.66667%}.row .col-xs-offset-8{margin-left:66.66667%}.row .col-xs-9{width:75%}.row .col-xs-offset-9{margin-left:75%}.row .col-xs-10{width:83.33333%}.row .col-xs-offset-10{margin-left:83.33333%}.row .col-xs-11{width:91.66667%}.row .col-xs-offset-11{margin-left:91.66667%}.row .col-xs-12{width:100%}.row .col-xs-offset-12{margin-left:100%}}@media (min-width:48em){.row .col-sm-offset-0{margin-left:0}.row .col-sm-1{width:8.33333%}.row .col-sm-offset-1{margin-left:8.33333%}.row .col-sm-2{width:16.66667%}.row .col-sm-offset-2{margin-left:16.66667%}.row .col-sm-3{width:25%}.row .col-sm-offset-3{margin-left:25%}.row .col-sm-4{width:33.33333%}.row .col-sm-offset-4{margin-left:33.33333%}.row .col-sm-5{width:41.66667%}.row .col-sm-offset-5{margin-left:41.66667%}.row .col-sm-6{width:50%}.row .col-sm-offset-6{margin-left:50%}.row .col-sm-7{width:58.33333%}.row .col-sm-offset-7{margin-left:58.33333%}.row .col-sm-8{width:66.66667%}.row .col-sm-offset-8{margin-left:66.66667%}.row .col-sm-9{width:75%}.row .col-sm-offset-9{margin-left:75%}.row .col-sm-10{width:83.33333%}.row .col-sm-offset-10{margin-left:83.33333%}.row .col-sm-11{width:91.66667%}.row .col-sm-offset-11{margin-left:91.66667%}.row .col-sm-12{width:100%}.row .col-sm-offset-12{margin-left:100%}}@media (min-width:61.25em){.row .col-md-offset-0{margin-left:0}.row .col-md-1{width:8.33333%}.row .col-md-offset-1{margin-left:8.33333%}.row .col-md-2{width:16.66667%}.row .col-md-offset-2{margin-left:16.66667%}.row .col-md-3{width:25%}.row .col-md-offset-3{margin-left:25%}.row .col-md-4{width:33.33333%}.row .col-md-offset-4{margin-left:33.33333%}.row .col-md-5{width:41.66667%}.row .col-md-offset-5{margin-left:41.66667%}.row .col-md-6{width:50%}.row .col-md-offset-6{margin-left:50%}.row .col-md-7{width:58.33333%}.row .col-md-offset-7{margin-left:58.33333%}.row .col-md-8{width:66.66667%}.row .col-md-offset-8{margin-left:66.66667%}.row .col-md-9{width:75%}.row .col-md-offset-9{margin-left:75%}.row .col-md-10{width:83.33333%}.row .col-md-offset-10{margin-left:83.33333%}.row .col-md-11{width:91.66667%}.row .col-md-offset-11{margin-left:91.66667%}.row .col-md-12{width:100%}.row .col-md-offset-12{margin-left:100%}}@media (min-width:75em){.row .col-lg-offset-0{margin-left:0}.row .col-lg-1{width:8.33333%;margin-left:8.33333%}.row .col-lg-2{width:16.66667%;margin-left:16.66667%}.row .col-lg-3{width:25%;margin-left:25%}.row .col-lg-4{width:33.33333%;margin-left:33.33333%}.row .col-lg-5{width:41.66667%;margin-left:41.66667%}.row .col-lg-6{width:50%;margin-left:50%}.row .col-lg-7{width:58.33333%;margin-left:58.33333%}.row .col-lg-8{width:66.66667%;margin-left:66.66667%}.row .col-lg-9{width:75%;margin-left:75%}.row .col-lg-10{width:83.33333%;margin-left:83.33333%}.row .col-lg-11{width:91.66667%;margin-left:91.66667%}.row .col-lg-12{width:100%;margin-left:100%}}*{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}body{margin:0;padding:0}
